; ModuleID = '/home/carl/AnghaBench/reactos/boot/freeldr/fdebug/extr_rs232.c_Rs232WriteByteWin32.c'
source_filename = "/home/carl/AnghaBench/reactos/boot/freeldr/fdebug/extr_rs232.c_Rs232WriteByteWin32.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@hPortHandle = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [43 x i8] c"WriteFile() failed. GetLastError() = %lu.\0A\00", align 1
@FALSE = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @Rs232WriteByteWin32(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 0, i32* %4, align 4
  %7 = load i32, i32* @hPortHandle, align 4
  %8 = call i32 @WriteFile(i32 %7, i32* %3, i32 1, i32* %4, i32* null)
  store i32 %8, i32* %5, align 4
  %9 = load i32, i32* %5, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %11, label %14

11:                                               ; preds = %1
  %12 = load i32, i32* %4, align 4
  %13 = icmp ne i32 %12, 1
  br i1 %13, label %14, label %20

14:                                               ; preds = %11, %1
  %15 = call i32 (...) @GetLastError()
  store i32 %15, i32* %6, align 4
  %16 = call i32 @TEXT(i8* getelementptr inbounds ([43 x i8], [43 x i8]* @.str, i64 0, i64 0))
  %17 = load i32, i32* %6, align 4
  %18 = call i32 @_tprintf(i32 %16, i32 %17)
  %19 = load i32, i32* @FALSE, align 4
  store i32 %19, i32* %2, align 4
  br label %22

20:                                               ; preds = %11
  %21 = load i32, i32* @TRUE, align 4
  store i32 %21, i32* %2, align 4
  br label %22

22:                                               ; preds = %20, %14
  %23 = load i32, i32* %2, align 4
  ret i32 %23
}

declare dso_local i32 @WriteFile(i32, i32*, i32, i32*, i32*) #1

declare dso_local i32 @GetLastError(...) #1

declare dso_local i32 @_tprintf(i32, i32) #1

declare dso_local i32 @TEXT(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
